zerocopy-derive/tests/ui-nightly/derive_transparent.stderr
error: cannot find derive macro `TryFromBytes` in this scope
  --> tests/ui-nightly/derive_transparent.rs:27:19
   |
27 | #[derive(AsBytes, TryFromBytes, FromZeros, FromBytes, Unaligned)]
   |                   ^^^^^^^^^^^^
   |
  ::: src/lib.rs
   |
   | pub fn derive_from_bytes(ts: proc_macro::TokenStream) -> proc_macro::TokenStream {
   | -------------------------------------------------------------------------------- similarly named derive macro `FromBytes` defined here
   |
help: a derive macro with a similar name exists
   |
27 | #[derive(AsBytes, FromBytes, FromZeros, FromBytes, Unaligned)]
   |                   ~~~~~~~~~
help: consider importing one of these items
   |
14  + use zerocopy::TryFromBytes;
    |
14  + use zerocopy_derive::TryFromBytes;
    |

error[E0405]: cannot find trait `TryFromBytes` in this scope
  --> tests/ui-nightly/derive_transparent.rs:37:50
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: TryFromBytes);
   |                                                  ^^^^^^^^^^^^
   |
  ::: $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeros {
   | ------------------------------------- similarly named trait `FromBytes` defined here
   |
help: a trait with a similar name exists
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   |                                                  ~~~~~~~~~
help: consider importing this trait
   |
14   + use zerocopy::TryFromBytes;
     |
